--- a/plugins/cordova-plugin-camera-preview/plugin.xml
+++ b/plugins/cordova-plugin-camera-preview/plugin.xml
@@ -47,6 +47,12 @@
         <param name="ios-package" value="CameraPreview" onload="true" />
       </feature>
     </config-file>
+	<config-file target="*-Info.plist" parent="NSPhotoLibraryUsageDescription">
+			<string>Allow the app to use your camera</string>
+		</config-file>
+		<config-file target="*-Info.plist" parent="NSCameraUsageDescription">
+			<string>Allow the app to use your camera</string>
+		</config-file>
 
     <header-file src="src/ios/CameraPreview.h" />
     <source-file src="src/ios/CameraPreview.m" />
